--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href = "index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Share The Love</title>
 </head>
 <body>
-    
+    <div class = container>
+        <!--Heading-->
+        <h2>SHARE THE LOVE</h2>
+        <!--Picture-->
+        <img src="photos/sharethelove_meta.jpg" class ="photo"> 
+        <div class = information>
+            <!--Paragraph-->
+            <p>Share the love. Refer your friends! We've made it simple and fun. Personalize a message about your experience with Modere, share your code, and receive a $10 credit to spend at Modere when your friends make their first purchase. Those who shop with your code will also receive a $10 credit towards their favorite everyday essentials. Now go on, start sharing.</p> 
+        </div>
+        <div class = share>
+            <div class = email-text>
+                <h3>Invite by Email or Text</h3>
+                <div class = radio-btns>
+                    <input type="radio" id="email" name="contact" value="email">
+                    <label for="email">EMAIL</label>
+                    <input type="radio" id="text" name="contact" value="text">
+                    <label for="text">TEXT</label><br>
+                    <p>THE RECIPIENT OF THE EMAIL OR TEXT</p>
+                </div>
+            </div>
+            <div class = social-media>
+
+            </div>
+        </div>
+
+    </div>    
 </body>
 </html>
