--- a/index.html
+++ b/index.html
@@ -51,22 +51,32 @@
                         <h3 class="invite-title">Invite by Social Media</h3>
                     </div>
                     <div class="platforms">
-                        <div class="platform-icon"><p class="platform-text"></p><a href="https://www.facebook.com/" target="_blank">
-                            <img src="./photos/facebook.png"></a>          Facebook</p>
+
+                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><iconify-icon icon="akar-icons:facebook-fill" style="color: #b20714; scale:200%; width:20px; "></iconify-icon></i></a>Facebook</p>   
+                        </div>
+                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><iconify-icon icon="ant-design:twitter-circle-filled" style="color: #b20714; scale:200%; width:20px; "></iconify-icon></i></a>Twitter</p>   
+                        </div>
+                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><iconify-icon icon="akar-icons:pinterest-fill" style="color: #b20714; scale:200%; width:20px; "></iconify-icon></i></a>Pinterest</p>   
+                        </div>
+                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><iconify-icon icon="ant-design:google-plus-circle-filled" style="color: #b20714; scale:200%; width:20px; "></iconify-icon></i></a>Google Plus</p>   
+                        </div>
+                        <!-- <div class="platform-icon"><p class="platform-text"></p><a href="https://www.facebook.com/" target="_blank">
+                            <img src="./photos/facebook.png"></a>Facebook</p>
                         </div>
                         <div class="platform-icon"><p class="platform-text"></p><a href="https://twitter.com/" target="_blank">
-                            <img src="./photos/twitter.png"></a>          Twitter</p>
+                            <img src="./photos/twitter.png"></a>Twitter</p>
                         </div>
                         <div class="platform-icon"><p class="platform-text"></p><a href="https://www.pinterest.com/" target="_blank">
-                            <img src="./photos/pinterest.png"></a>          Pinterest</p>
+                            <img src="./photos/pinterest.png"></a>Pinterest</p>
                         </div>
-                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><img src="./photos/google-plus.png"></a>          Google Plus</p>   
-                        </div>
+                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><img src="./photos/google-plus.png"></a>Google Plus</p>   
+                        </div> -->
                     </div> 
                 </div>
             </div>
         </div>
     </div> 
     <script src="./index.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 </body>
 </html>
