--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>Share The Love</title>
 </head>
 <body>
-    <div class = container>
+    <div class="container">
         <!--Heading-->
         <h2>SHARE THE LOVE</h2>
         <!--Picture-->
-        <div class = "picture-discription">
-            <img src = "photos/sharethelove_meta.jpg" class = "photo"> <br><br>
+        <div class="picture-discription">
+            <img src="photos/sharethelove_meta.jpg" class="photo"> <br><br>
             <!--Paragraph-->
             <div class="textbox">
                 <p>Share the love. Refer your friends! We've made it simple and fun. Personalize a message about your experience with Modere, share your code, and receive a $10 credit to spend at Modere when your friends make their first purchase. Those who shop with your code will also receive a $10 credit towards their favorite everyday essentials. Now go on, start sharing.</p>
             </div>
-        
-            <div class = "share">
-                    <div class = "radio-btns">
+            <!-- Form title/input -->
+            <div class="share">
+                    <div class="radio-btns">
                         <h3 class="share-title">Invite by Email or Text</h3>
                         <form id="form-id">
                             <input type="radio" id="email" name="contact" value="email">
@@ -36,11 +36,12 @@
                             <input type="submit" value="Send Invite" class="submit-btn" id="sbt">
                         </form>
                     </div>
-                <div class = social-media>
-                    <div class = "links">
-                        <h3 class = "link-title">Copy Link</h3>
-                        <div class = "copy-box">
-                            <p class = "link" id="copy">
+                <!-- Social Media Share Zone -->
+                <div class=social-media>
+                    <div class="links">
+                        <h3 class="link-title">Copy Link</h3>
+                        <div class="copy-box">
+                            <p class="link" id="copy">
                                 https://www.modere.com/Home/welcome/?referralCode=9b1h0w
                                 <button type="button" onclick="copyEvent('copy')" id="copy-btn">Copy</button>
                             </p>
@@ -61,17 +62,6 @@
                             <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><iconify-icon icon="ant-design:google-plus-circle-filled" style="color: #b20714; scale:200%; width:20px; "></iconify-icon></i></a>Google Plus</p>   
                             </div>
                         </div>
-                        <!-- <div class="platform-icon"><p class="platform-text"></p><a href="https://www.facebook.com/" target="_blank">
-                            <img src="./photos/facebook.png"></a>Facebook</p>
-                        </div>
-                        <div class="platform-icon"><p class="platform-text"></p><a href="https://twitter.com/" target="_blank">
-                            <img src="./photos/twitter.png"></a>Twitter</p>
-                        </div>
-                        <div class="platform-icon"><p class="platform-text"></p><a href="https://www.pinterest.com/" target="_blank">
-                            <img src="./photos/pinterest.png"></a>Pinterest</p>
-                        </div>
-                        <div class="platform-icon"><p class="platform-text"><a href="https://drive.google.com" target="_blank"><img src="./photos/google-plus.png"></a>Google Plus</p>   
-                        </div> -->
                     </div> 
                 </div>
             </div>
